--- a/package.json
+++ b/package.json
@@ -1,7 +1,22 @@
 {
   "name": "calender",
   "version": "0.1.0",
+  "description": "A calendar app for your daily events.",
+  "keywords": ["vue", "firebase", "firestore", "vuetify"],
   "private": true,
+  "bugs":{
+    "email": "sgkul2000@gmail.com",
+    "url": "https://github.com/sgkul2000/calender"
+  },
+  "author": {
+    "name": "Shreesh kulkarni",
+    "email": "sgkul2000@gmail.com",
+    "url": "htts://codekulkarni.com"
+  },
+  "repository": {
+    "type" : "git",
+    "url" : "https://github.com/sgkul2000/calender.git"
+  },
   "scripts": {
     "serve": "vue-cli-service serve",
     "build": "vue-cli-service build",
@@ -10,6 +25,7 @@
   "dependencies": {
     "core-js": "^3.6.5",
     "firebase": "^7.24.0",
+    "firebaseui": "^4.7.0",
     "vue": "^2.6.11",
     "vue-router": "^3.2.0",
     "vue-textarea-autosize": "^1.1.1",
@@ -24,6 +40,7 @@
     "@vue/cli-service": "~4.5.0",
     "@vue/eslint-config-standard": "^5.1.2",
     "babel-eslint": "^10.1.0",
+    "babel-plugin-transform-remove-console": "^6.9.4",
     "eslint": "^6.7.2",
     "eslint-plugin-import": "^2.20.2",
     "eslint-plugin-node": "^11.1.0",
